Fix slideshows changing size when selected in slideshow list on mobile player.

--- a/public/modules/player/css/device-interaction.scss
+++ b/public/modules/player/css/device-interaction.scss
@@ -162,6 +162,7 @@
 .iqss-device-interaction-content-slide {
     height: 124px;
     padding: 11px;
+    border: 1px solid transparent;
     border-top: 1px solid #A9A9A9;
     width: 100%;
     padding-bottom: 37px;
